utility and data provider

--- a/src/components/Product/product.module.css
+++ b/src/components/Product/product.module.css
@@ -36,6 +36,7 @@
   border: 1px solid #fff;
   border-radius: 20px;
   font-size: 16px;
+  cursor: pointer;
   background-color: #fcb902;
   width: 100%;
   padding: 3px;
