--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
-/* * {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-} */
+}
+
+:root {
+  --primary-color: #febd69;
+  --primary-shade: #d49644;
+}
 
 body {
   font-family: sans-serif;
