finalize payment methods and databese

--- a/src/pages/Payment/payment.module.css
+++ b/src/pages/Payment/payment.module.css
@@ -51,6 +51,13 @@
 .payment__details button:hover {
   background-color: var(--primary-shade);
 }
+.loading {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(52, 52, 52);
+  gap: 10px;
+}
 @media screen and (max-width: 868px) {
   .flex {
     flex-direction: column;
