--- a/src/components/Category/category.module.css
+++ b/src/components/Category/category.module.css
@@ -1,6 +1,6 @@
 .category {
   height: 350px;
-  width: 350px;
+  width: 300px;
   background-color: #fff;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
@@ -28,6 +28,11 @@
   position: relative;
   margin-top: -10%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  max-width: 1600px;
+  row-gap: 50px;
+  column-gap: 10px;
+  margin-left: auto;
+  margin-right: auto;
   place-items: center;
 }
