--- a/src/components/Product/product.module.css
+++ b/src/components/Product/product.module.css
@@ -1,8 +1,10 @@
 .products_container {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  /* grid-template-columns: repeat(5, 1fr); */
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  max-width: 1400px;
   gap: 50px 30px;
-  margin: 50px 150px;
+  margin: 50px auto;
   place-items: center;
 }
 .card_container {
